--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop",
+  "name": "Fit",
   "version": "1.0.0",
   "description": "",
   "main": "backend/server.js",
@@ -9,10 +9,17 @@
     "dev": "nodemon backend/server.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
-    "mongoose": "^6.5.3"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.5.3",
+    "mongoose-findorcreate": "^3.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
+    "validator": "^13.7.0"
   }
 }
