--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,6 @@
 PORT=4000
-
+CLOUDINARY_URL="cloudinary://151615623392951:b8O-Df3hqe7kAMb96JfyPPLH8qE@dcnw1lzzr"
 DB_URI="mongodb+srv://admin:admin12@cluster0.u8lwra2.mongodb.net/?retryWrites=true&w=majority"
+CLOUDINARY_NAME='dcnw1lzzr'
+CLOUDINARY_API_KEY='151615623392951'
+CLOUDINARY_API_SECRET='b8O-Df3hqe7kAMb96JfyPPLH8qE'
