--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.32.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
